# screm

./: README.md  test.py
ffmpeg/: README.txt
ffmpeg/doc/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  general.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  libswresample.html  libswscale.html  mailing-list-faq.html  nut.html  platform.html
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
openal_example/: .gitignore  CMakeLists.txt
openal_example/examples/: example.cpp
openal_example/src/: main.cpp  wave.cpp  wave.hpp
